# krita-plugin-mdp

./: LICENSE  README.md  mdp_import.desktop  pyproject.toml
extras/: mdp_format_wiki.md  pwa_robot.py
mdp_import/: __init__.py  krita_utils.py  mdp_archive.py  mdp_header.py  mdp_layer.py  mdp_loader.py  mdp_mdi.py  mdp_mdibin.py  mdp_plugin.py  mdp_tile.py  mdp_utils.py  py_fastlz.pyz
mdp_import/mdp/: archive.py  header.py  kra.py  layer.py  loader.py  mdibin.py  tile.py  utils.py
mdp_import/mdp/mdi/: __init__.py  mdi.py  utils.py
mdp_import/neet/: CImageTile.py  CMangaFileMDB.py  CMangaFileMDI.py  CMangaFileMDP.py  CMangaLayer.py  CPackerArchive.py  README.md  TMDIPack.py  __init__.py
mdp_import/plugin/: __init__.py  extension.py
mdp_import/weeb/: CKritaLayer.py  loader.py  utils.py
samples/: 8bit_test.mdp  checkerboard5.mdp  yohaku_370x320.mdp
